--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.1",
+    "@heroicons/react": "^1.0.6",
+    "@prisma/client": "^4.2.1",
+    "@types/express": "^4.17.13",
+    "apollo-server-core": "^3.10.1",
+    "apollo-server-fastify": "^3.10.1",
+    "apollo-server-types": "^3.6.2",
+    "fastify": "3.17.0",
+    "graphql": "^16.6.0",
+    "graphql-ws": "^5.10.1",
+    "mysql2": "^2.3.3",
     "next": "12.2.5",
+    "prisma": "^4.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@types/node": "18.7.6",
