--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@heroicons/react": "^1.0.6",
+    "autoprefixer": "^10.4.8",
+    "graphql": "^16.6.0",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.8"
