--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
     "@graphql-tools/schema": "^9.0.1",
     "@prisma/client": "^4.2.1",
     "@types/express": "^4.17.13",
+    "@types/ws": "^8.5.3",
     "apollo-server-core": "^3.10.1",
     "apollo-server-express": "^3.10.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.10.1",
     "mysql2": "^2.3.3",
     "prisma": "^4.2.1",
