--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "string-template": "^1.0.0",
     "tailwindcss": "^3.1.8",
+    "use-deep-compare-effect": "^1.8.1",
     "ws": "^8.8.1"
   },
   "devDependencies": {
